# omop-lite

./: .gitignore  Dockerfile  README.md  alembic.ini  compose-omop-ts.yml  docker-compose.yml  index.yaml  mkdocs.yml  pyproject.toml  release.config.js  setup.sh
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: check.build.yml  check.dependency-review.yml  check.pr-title.yml  check.test.python.yml  check.test.system.yml  check.test.yml  docs.yml  release.helm.yaml  release.yml
alembic/: env.py
alembic/versions/: 377e674b2401_pg_create_tables.py  3da18f79ff7b_add_constraints.py  9a343fe1e393_pg_add_constraints.py  bbf6835f69e1_add_primary_keys.py
charts/omop-lite/: Chart.yaml  values.yaml
docs/: gen_nav.py  index.md
docs/api/: omop_lite.md
docs/development/: contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: cli-reference.md  docker.md  synthetic-data.md  text-search.md
embeddings/: load_embeddings.py
omop-lite/: main.py
omop_lite/: __init__.py  __main__.py  cli.py  config.py  db.py  models.py  settings.py
omop_lite/cli/: __init__.py  commands.py  main.py  utils.py
omop_lite/db/: base.py  postgres.py  sqlserver.py
omop_lite/synthetic/: CONCEPT.csv  CONDITION_OCCURRENCE.csv
scripts/pg/: indices.sql  init.sh
scripts/sql_server/: init.sh
test-data/: CONCEPT.csv  CONCEPT_RELATIONSHIP.csv  DRUG_STRENGTH.csv
tests/integration/: conftest.py  test_cli_integration.py  test_database_integration.py  (+2 more)
text-search/: Dockerfile  load_text_search.py
(+23 files in other folders)
